link fail on Ubuntu 18.04 and 16.04
Building with gst-build on master fails on Ubuntu 16.04 and Ubuntu 18.04, but works on 19.10, strangely enough.
Problem is: undefined reference to g_hash_table_steal_extended
FAILED: subprojects/gst-editing-services/ges/libges-1.0.so.0.1700.0
cc -o subprojects/gst-editing-services/ges/libges-1.0.so.0.1700.0 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/meson-generated_.._lex.priv_ges_parse_yy.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-enums.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-meta-container.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-timeline.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-layer.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-pipeline.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-source-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-base-effect-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-effect-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-uri-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-operation-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-base-transition-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-transition-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-test-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-title-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-overlay-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-text-overlay-clip.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-track.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-audio-track.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-video-track.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-track-element.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-operation.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-video-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-audio-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-video-uri-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-audio-uri-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-image-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-multi-file-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-transition.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-audio-transition.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-video-transition.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-video-test-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-audio-test-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-title-source.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-text-overlay.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-base-effect.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-effect.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-screenshot.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-formatter.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-asset.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-uri-asset.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-clip-asset.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-track-element-asset.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-extractable.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-project.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-base-xml-formatter.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-xml-formatter.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-command-line-formatter.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-auto-transition.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-timeline-element.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-timeline-tree.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-container.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-effect-asset.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-smart-adder.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-smart-video-mixer.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-utils.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-group.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-validate.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-structured-interface.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-structure-parser.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-marker-list.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/gstframepositioner.c.o' 'subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-pitivi-formatter.c.o' -Wl,--as-needed -Wl,--no-undefined -shared -fPIC -Wl,--start-group -Wl,-soname,libges-1.0.so.0 -Wl,-Bsymbolic-functions subprojects/gstreamer/gst/libgstreamer-1.0.so.0.1700.0 subprojects/gstreamer/libs/gst/base/libgstbase-1.0.so.0.1700.0 subprojects/gst-plugins-base/gst-libs/gst/video/libgstvideo-1.0.so.0.1700.0 subprojects/orc/orc/liborc-0.4.so.0.29.0 subprojects/gst-plugins-base/gst-libs/gst/pbutils/libgstpbutils-1.0.so.0.1700.0 subprojects/gst-plugins-base/gst-libs/gst/audio/libgstaudio-1.0.so.0.1700.0 subprojects/gst-plugins-base/gst-libs/gst/tag/libgsttag-1.0.so.0.1700.0 subprojects/gstreamer/libs/gst/controller/libgstcontroller-1.0.so.0.1700.0 subprojects/gst-devtools/validate/gst/validate/libgstvalidate-1.0.so.0.1700.0 /usr/lib/x86_64-linux-gnu/libglib-2.0.so /usr/lib/x86_64-linux-gnu/libgobject-2.0.so -Wl,--export-dynamic /usr/lib/x86_64-linux-gnu/libgmodule-2.0.so -pthread -lm /usr/lib/x86_64-linux-gnu/libz.so /usr/lib/x86_64-linux-gnu/libgio-2.0.so /usr/lib/x86_64-linux-gnu/libxml2.so -Wl,--end-group '-Wl,-rpath,$ORIGIN/../../gstreamer/gst:$ORIGIN/../../gstreamer/libs/gst/base:$ORIGIN/../../gst-plugins-base/gst-libs/gst/video:$ORIGIN/../../orc/orc:$ORIGIN/../../gst-plugins-base/gst-libs/gst/pbutils:$ORIGIN/../../gst-plugins-base/gst-libs/gst/audio:$ORIGIN/../../gst-plugins-base/gst-libs/gst/tag:$ORIGIN/../../gstreamer/libs/gst/controller:$ORIGIN/../../gst-devtools/validate/gst/validate' -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gstreamer/gst -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gstreamer/libs/gst/base -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gst-plugins-base/gst-libs/gst/video -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/orc/orc -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gst-plugins-base/gst-libs/gst/pbutils -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gst-plugins-base/gst-libs/gst/audio -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gst-plugins-base/gst-libs/gst/tag -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gstreamer/libs/gst/controller -Wl,-rpath-link,/home/jericho/builds/gst-build/build/subprojects/gst-devtools/validate/gst/validate
subprojects/gst-editing-services/ges/336ff7e@@ges-1.0@sha/ges-timeline-element.c.o: In function `ges_timeline_element_remove_child_property':
/home/jericho/builds/gst-build/build/../subprojects/gst-editing-services/ges/ges-timeline-element.c:2296: undefined reference to `g_hash_table_steal_extended'
collect2: error: ld returned 1 exit status